remove base href

--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="Content/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="Content/site.css" />
-        <base href='/'></base>
+        <!--<base href='/'></base>-->
     </head>
     <body ng-cloak>
         <course-viewer-app></course-viewer-app>
